kubernetes/nodePortService.yaml
apiVersion: v1
kind: Service
metadata:
  name: pthyon-app-service
  namespace: default
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: pthyon-app
  type: NodePort
